--- a/src/app/booking/views/bookings.html
+++ b/src/app/booking/views/bookings.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <form action="" method="post" role="form">
+  <!--<form action="" method="post" role="form">-->
   	<legend>My Bookings</legend>
 
   	<div class="form-group">
@@ -10,18 +10,18 @@
   	<table class="table table-hover">
   		<thead>
   			<tr>
-  				<th>Reason</th>
-  				<th>Date and time</th>
+  				<th>Patient Email</th>
+  				<th>Details</th>
   				<th></th>
   			</tr>
   		</thead>
   		<tbody>
   			<tr ng-repeat="booking in vm.bookings">
-  				<td>{{booking.reason}}</td>
-  				<td>{{booking.date | date:"MMM d, y h:mm:ss a"}}</td>
+  				<td>{{booking.patientUserId}}</td>
+  				<td><a ui-sref="booking.consultProcess, {bookingId: booking.processInstanceId}">View Details ..</a></td>
           <td><button ng-click="vm.cancel()" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-remove"></span> Cancel</button></td>
   			</tr>
   		</tbody>
   	</table>
-  </form>
+  <!--</form>-->
 </div>
