--- a/src/app/booking/views/consult.html
+++ b/src/app/booking/views/consult.html
@@ -1,30 +1,28 @@
 <div class="row">
-  <form action="" method="post" role="form">
-    <legend>Booking Processing
-      <small>[For Staff Only]</small>
-    </legend>
-    <uib-accordion close-others="true">
-      <div is-open="true" uib-accordion-group class="panel-default" heading="Patient Details">
-        <div class="row">
-          <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div user="vm.userDetails" ng-include="'app/booking/views/userDetails.html'"></div>
-          </div>
+  <!--<form action="" method="post" role="form">-->
+  <legend>Booking Processing
+    <small>Use this page to complete patient consultations</small>
+  </legend>
+  <uib-accordion close-others="true">
+    <div is-open="true" uib-accordion-group class="panel-default" heading="Patient Booking Details">
+      <div class="row">
+        <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
+          <div user="vm.booking.patientUser" ng-include="'app/booking/views/userDetails.html'"></div>
         </div>
       </div>
-      <div uib-accordion-group class="panel-default" heading="Tasks">
-        <div class="row">
-          <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div tasks="vm.tasks" ng-include="'app/booking/views/tasks.html'"></div>
-          </div>
+    </div>
+    <div uib-accordion-group class="panel-default" heading="Process Patient Booking">
+      <div class="row">
+        <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
+          <div tasks="vm.tasks" ng-include="'app/booking/views/tasks.html'"></div>
         </div>
       </div>
-      <div uib-accordion-group class="panel-default" heading="Patient History">
-        <div class="row">
-          <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div history="vm.history" ng-include="'app/booking/views/patientHistory.html'"></div>
-          </div>
-        </div>
-      </div>
-    </uib-accordion>
-  </form>
+    </div>
+  </uib-accordion>
+  <div class="row">
+    <div class="col-md-offset-1 col-xs-10 col-sm-10 col-md-10 col-lg-10">
+      <a ui-sref="booking.consult" class="btn btn-primary btn-lg pull-right"> <span
+        class="glyphicon glyphicon-circle-arrow-left"></span> Return to patient search page</a>
+    </div>
+  </div>
 </div>
