--- a/src/app/main/layout.html
+++ b/src/app/main/layout.html
@@ -11,7 +11,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
         <ul class="nav navbar-nav navbar-right acme-navbar-text">
-          <li ng-if="vm.currentUser"><a ui-sref="booking.patients">My Bookings</a></li>
+          <li ng-if="vm.currentUser"><a ui-sref="patient.booking">Bookings</a></li>
           <li ng-if="!vm.currentUser"><a ui-sref="auth.login">Login</a></li>
           <li ng-if="vm.currentUser" ng-click="vm.logout()" ><a>Logout</a></li>
         </ul>
