--- a/src/app/patient/views/bookings.html
+++ b/src/app/patient/views/bookings.html
@@ -1,27 +1,37 @@
 <div class="row">
   <form action="" method="post" role="form">
   	<legend>My Bookings</legend>
-
-  	<div class="form-group">
-  		<label for=""></label>
-  		<input type="text" class="form-control" name="" id="" placeholder="Input...">
-  	</div>
-
-  	<table class="table table-hover">
-  		<thead>
-  			<tr>
-  				<th>Reason</th>
-  				<th>Date and time</th>
-  				<th></th>
-  			</tr>
-  		</thead>
-  		<tbody>
-  			<tr ng-repeat="booking in vm.bookings">
-  				<td>{{booking.reason}}</td>
-  				<td>{{booking.date | date:"MMM d, y h:mm:ss a"}}</td>
-          <td><button ng-click="vm.cancel()" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-remove"></span> Cancel</button></td>
-  			</tr>
-  		</tbody>
-  	</table>
+    <div class="row" style="margin-top: 25px; margin-bottom: 15px">
+      <div class="col-md-6">
+        <div id="custom-search-input">
+          <div class="input-group col-md-12">
+            <input ng-model="searchText" type="text" class="form-control input-lg" placeholder="Enter Filter Text"/>
+                    <span class="input-group-btn">
+                        <button class="btn btn-info btn-lg" type="button">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th>Patient Email</th>
+        <th>Booking Date</th>
+        <th>Reason</th>
+        <th></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="booking in vm.bookings | filter:searchText">
+        <td>{{booking.patientUserId}}</td>
+        <td>{{booking.requiredDate | date:'medium'}}</td>
+        <td>{{booking.reason}}</td>
+        <td><a class="btn-lg btn btn-primary" ui-sref="booking.consultProcess({bookingId: booking.processInstanceId})"> <span class="glyphicon glyphicon-list"></span> View Details ..</a></td>
+      </tr>
+      </tbody>
+    </table>
   </form>
 </div>
